-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 1.10.0
-
Fix Version/s: 1.10.0
-
Component/s: None
-
Labels:None
Trying to compile 1.10.0-rc0 with devtoolset-7 I hit the following error:
In file included from /data/1/todd/apache-kudu-1.10.0/src/kudu/gutil/macros.h:14:0, from /data/1/todd/apache-kudu-1.10.0/src/kudu/common/types.h:34, from /data/1/todd/apache-kudu-1.10.0/src/kudu/common/columnblock.h:28, from /data/1/todd/apache-kudu-1.10.0/src/kudu/common/columnblock.cc:18: /data/1/todd/apache-kudu-1.10.0/src/kudu/gutil/port.h: In substitution of ‘template<class T, typename port_internal::enable_if_numeric<T>::type* <anonymous>, bool USE_REINTERPRET> T UnalignedLoad(const void*) [with T = __int128; typename port_internal::enable_if_numeric<T>::type* <anonymous> = <missing>; bool USE_REINTERPRET = <missing>]’: /data/1/todd/apache-kudu-1.10.0/src/kudu/common/types.h:361:55: required from here /data/1/todd/apache-kudu-1.10.0/src/kudu/gutil/port.h:1196:73: internal compiler error: unexpected expression ‘LoadByReinterpretCast<__int128>’ of kind template_id_expr bool USE_REINTERPRET = port_internal::LoadByReinterpretCast<T>()>