KUDU-2869. Fix compiler error with devtoolset-7 (gcc 7)

For whatever reason, some particular C++ syntax used in port.h caused
gcc 7 to crash with an internal error during compilation. This just
rephrases the code in a different way to avoid the issue.

Change-Id: Id95a4be07ff1e5ef60a95c65f5a850020f80a273
Reviewed-on: http://gerrit.cloudera.org:8080/13677
Tested-by: Grant Henke <granthenke@apache.org>
Reviewed-by: Andrew Wong <awong@cloudera.com>
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>